DataSet example.
